--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -27,7 +27,7 @@
 </p>
 
 
-Brief summary of the course
+<strong></strong>Brief summary of the course</strong>
 	<p>
 		<i>In this course we are going to gently investigate one of the key concepts of computer science,<br>
 		namely that of (functional) programming language. In particular, we are going to stress its<br>
@@ -43,11 +43,11 @@ Slides and/or notes for the lectures will appear here soon.</br>
 <br>Each lecture will adress a couple of important points in the theory of programs and proofs, by giving some of its basic elements.</br>
 
 <ul>
-  <li>Lecture 1: Topology/domain-theory of the "graph model" over &#8472;(N): <a href="./esslli25_notes1.pdf">Notes</a> (soon the slides as well!) <!-- <a href="">Slides</a></p>-->	</li>
-  <li>Lecture 2: The &#955;-calculus <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
-  <li>Lecture 3: Category theory for denotational semantics <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
-  <li>Lecture 4: Curry-Howard for minimal logic <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
-  <li>Lecture 5: Krivine's approach to classical logic <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+  <li><strong>Lecture 1:</strong> Topology/domain-theory of the "graph model" over &#8472;(N): <a href="./esslli25_notes1.pdf">Notes</a> (soon the slides as well!) <!-- <a href="">Slides</a></p>-->	</li>
+  <li><strong>Lecture 2:</strong> The &#955;-calculus <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+  <li><strong>Lecture 3:</strong> Category theory for denotational semantics <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+  <li><strong>Lecture 4:</strong> Curry-Howard for minimal logic <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+  <li><strong>Lecture 5:</strong> Krivine's approach to classical logic <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
 </ul><br>
 
 </p>
