--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -27,7 +27,7 @@
 </p>
 
 
-<strong><strong>Brief summary of the course</strong>
+<strong>Brief summary of the course</strong>
 	<p>
 		<i>In this course we are going to gently investigate one of the key concepts of computer science,<br>
 		namely that of (functional) programming language. In particular, we are going to stress its<br>
