--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -43,7 +43,7 @@ Slides and/or notes for the lectures will appear here soon.</br>
 <br>Each lecture will adress a couple of important points in the theory of programs and proofs, by giving some of its basic elements.</br>
 
 <ul>
-  <li><strong>Lecture 1:</strong> Topology/domain-theory of the "graph model" over &#8472;(N): <a href="./esslli25_notes1.pdf">Notes</a> (soon the slides as well!) <!-- <a href="">Slides</a></p>-->	</li>
+  <li><strong>Lecture 1:</strong> Topology/domain-theory of the "graph model" over &#8472;(N): <a href="./esslli25_notes1.pdf">Notes</a> (soon the slides as well!) <!-- <a href="./esslli25_slides1.pdf">Slides</a></p>--> </li>
   <li><strong>Lecture 2:</strong> The &#955;-calculus <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li><strong>Lecture 3:</strong> Category theory for denotational semantics <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
   <li><strong>Lecture 4:</strong> Curry-Howard for minimal logic <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
