--- a/Enseignements/2024-25/ESSLLI.html
+++ b/Enseignements/2024-25/ESSLLI.html
@@ -43,11 +43,11 @@ Slides and/or notes for the lectures will appear here soon.</br>
 <br>Each lecture will adress a couple of important points in the theory of programs and proofs, by giving some of its basic elements.</br>
 
 <ul>
-  <li><strong>Lecture 1:</strong> Topology/domain-theory of the "graph model" over &#8472;(N): <a href="./esslli25_notes1.pdf">Notes</a>, <a href="./esslli25_slides1.pdf">Slides</a></p> </li>
-  <li><strong>Lecture 2:</strong> The &#955;-calculus <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
-  <li><strong>Lecture 3:</strong> Category theory for denotational semantics <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
-  <li><strong>Lecture 4:</strong> Curry-Howard for minimal logic <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
-  <li><strong>Lecture 5:</strong> Krivine's approach to classical logic <!--<a href="">Notes</a> and <a href="">Slides</a></p>-->	</li>
+  <li><strong>Lecture 1:</strong> Topology/domain-theory of the "graph model" over &#8472;(N): <a href="./esslli25_notes1.pdf">Notes1</a>, <a href="./esslli25_slides1.pdf">Slides1</a></p> </li>
+  <li><strong>Lecture 2:</strong> The &#955;-calculus: <a href="./esslli25_notes2.pdf">Notes2</a><!--, <a href="./esslli25_slides2.pdf">Slides2</a></p>--> </li>
+  <li><strong>Lecture 3:</strong> Category theory for denotational semantics <!--: <a href="./esslli25_slides3.pdf">Slides3</a></p>--></li>
+  <li><strong>Lecture 4:</strong> Curry-Howard for minimal logic <!--<a href="./esslli25_slides4.pdf">Slides4</a></p>-->	</li>
+  <li><strong>Lecture 5:</strong> Krivine's approach to classical logic <!--: <a href="./esslli25_notes1.pdf">Notes5</a>, <a href="./esslli25_slides5.pdf">Slides1</a></p>--></li>
 </ul><br>
 
 </p>
