--- a/research.html
+++ b/research.html
@@ -13,8 +13,10 @@ Research Activity of Davide Barbarossa
 
 <p align = right>
 <CITE>
-La math&eacute;matique est l'art de donner le m&ecirc;me nom &agrave; des choses diff&eacute;rentes.
-<br> -- Henri Poincar&eacute; (Science et m&eacute;thode).
+	Les math&eacute;maticiens n'&eacute;tudient pas des objets, mais des relations entre les objets ;
+	<!--La math&eacute;matique est l'art de donner le m&ecirc;me nom &agrave; des choses diff&eacute;rentes.
+	C'est par la logique qu'on démontre, c'est par l'intuition qu'on invente.-->
+<br> -- Henri Poincar&eacute; (La Science et l'Hypoth&egrave;se<!--Science et m&eacute;thode-->).
 </CITE>
 </p>
 
