--- a/research.html
+++ b/research.html
@@ -65,8 +65,18 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <hr size=3>
 
 <p>
-<h3>Conference and Journal Papers (with peer review)</h3>
+<h3>Papers (with peer review)</h3>
 
+<h3>Preprints (submitted or work in progress)</h3>
+<ul>
+	<li>2025: <i>On the algorithmic structure of Dialectica programs</i> <a href="https://arxiv.org/abs/2501.16208">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
+	<li>2025: <i>Tropical Geometry of Probabilistic Programming Languages</i> <a href="https://arxiv.org/abs/2501.15637">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
+	<li>2025: <i>An excursion into Dialectica and Differentiation</i> <a href="https://arxiv.org/abs/2410.22494">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
+</ul>
+
+<p>
+<h2>Published (with peer review)</h2>
+	
 <ul>
    <li><b><i>Tropical Mathematics and the Lambda-Calculus I: Metric and Differential Analysis of Effectful Programs</i></b> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a> (long version: <a href="https://arxiv.org/abs/2311.15704">arxiv</a>)<br>
 	Davide Barbarossa and Paolo Pistone<br>
@@ -81,18 +91,8 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
    </li>
 </ul>
 
-
-<hr size=3>
-
-<p>
-<h3>Preprints (not published... yet)</h3>
-<ul>
-	<li>2025: <i>On the algorithmic structure of Dialectica programs</i> <a href="https://arxiv.org/abs/2501.16208">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
-	<li>2025: <i>Tropical Geometry of Probabilistic Programming Languages</i> <a href="https://arxiv.org/abs/2501.15637">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
-	<li>2025: <i>An excursion into Dialectica and Differentiation</i> <a href="https://arxiv.org/abs/2410.22494">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
-</ul>
 </p>
-		
+
 <hr size=3>
 
 	
