--- a/research.html
+++ b/research.html
@@ -67,28 +67,30 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <p>
 <h3>Papers</h3>
 
-<p>
-<h3>Preprints (submitted or work in progress)</h3>
-<ul>
-	<li>2025: <i>On the algorithmic structure of Dialectica programs</i> <a href="https://arxiv.org/abs/2501.16208">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
-	<li>2025: <i>Tropical Geometry of Probabilistic Programming Languages</i> <a href="https://arxiv.org/abs/2501.15637">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
-	<li>2025: <i>An excursion into Dialectica and Differentiation</i> <a href="https://arxiv.org/abs/2410.22494">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
-</ul>
 
-<p>
-<h3>Published (with peer review)</h3>	
 <ul>
-   <li><b><i>Tropical Mathematics and the Lambda-Calculus I: Metric and Differential Analysis of Effectful Programs</i></b> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a> (long version: <a href="https://arxiv.org/abs/2311.15704">arxiv</a>)<br>
-	Davide Barbarossa and Paolo Pistone<br>
-	32nd EACSL Annual Conference on Computer Science Logic (CSL 2024)<br><br>
-   <li><b><i>Resource approximation for the &#955;&#956;-calculus</i></b> <a href="./seminars/LICS22.pdf">(slides)</a> <a href="./papers/LICS22.pdf">(PDF)</a> (long version: see my PhD thesis)<br>
-        Davide Barbarossa<br>
-        36th Annual ACM/IEEE Symposium on Logic in Computer Science (LICS 2022)<br><br>
-   <li><b><i>Taylor Subsumes Scott, Berry, Kahn and Plotkin</i></b> <a href="https://dl.acm.org/doi/10.1145/3371069">(PDF)</a> (long version: see my PhD thesis)<br>
-	Davide Barbarossa and Giulio Manzonetto<br>
-	Principles of Programming Languages (POPL) 2020, PACMPL Vol. 4, pp. 1:1-1:23<br>
- 	<i>The paper received a Distinguished Paper Award from the POPL program committee!</i>
-   </li>
+	<li><strong>Preprints (submitted or work in progress)</strong></p>
+		<ul>
+			<li>2025: <i>On the algorithmic structure of Dialectica programs</i> <a href="https://arxiv.org/abs/2501.16208">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
+			<li>2025: <i>Tropical Geometry of Probabilistic Programming Languages</i> <a href="https://arxiv.org/abs/2501.15637">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
+			<li>2025: <i>An excursion into Dialectica and Differentiation</i> <a href="https://arxiv.org/abs/2410.22494">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
+		</ul>
+	</li>
+	<li><strong>Published (with peer review)</strong></p>
+		<ul>
+        	<li><b><i>Tropical Mathematics and the Lambda-Calculus I: Metric and Differential Analysis of Effectful Programs</i></b> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a> (long version: <a href="https://arxiv.org/abs/2311.15704">arxiv</a>)<br>
+					  	Davide Barbarossa and Paolo Pistone<br>
+						32nd EACSL Annual Conference on Computer Science Logic (CSL 2024)<br><br>
+   			<li><b><i>Resource approximation for the &#955;&#956;-calculus</i></b> <a href="./seminars/LICS22.pdf">(slides)</a> <a href="./papers/LICS22.pdf">(PDF)</a> (long version: see my PhD thesis)<br>
+        				Davide Barbarossa<br>
+        				36th Annual ACM/IEEE Symposium on Logic in Computer Science (LICS 2022)<br><br>
+   			<li><b><i>Taylor Subsumes Scott, Berry, Kahn and Plotkin</i></b> <a href="https://dl.acm.org/doi/10.1145/3371069">(PDF)</a> (long version: see my PhD thesis)<br>
+						Davide Barbarossa and Giulio Manzonetto<br>
+						Principles of Programming Languages (POPL) 2020, PACMPL Vol. 4, pp. 1:1-1:23<br>
+ 						<i>The paper received a Distinguished Paper Award from the POPL program committee!</i>
+   			</li>
+        </ul>
+	</li>
 </ul>
 
 </p>
