--- a/research.html
+++ b/research.html
@@ -41,12 +41,12 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <!-- <p>One day I would also like to consider the question of the foundations of physics.-->
 </p>
 
-<hr size=3>
+<!--<hr size=3>-->
 
 <p><h4>Currently, the following thoughts fill my mind...</h4>
 <li> Dialectica transformation, Hoare Logic, differential geometry/&#955;-calculus </li>
 <li> Tropical mathematics for &#955;-calculi </li>
-<li> What is an approximation of a programming language? </li>
+<!--<li> What is an approximation of a programming language? </li>-->
 </p>
 
 
