--- a/research.html
+++ b/research.html
@@ -177,7 +177,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <p>
 <h3>Research Seminars</h3>
 <ul>
-	<li>2025, University of Bath (UK), Workshop ``Programs from Proofs'': <i>Dialectica and Hoare Logic</i> <a href="./seminars/DHS.pdf">(slides)</a></li><br>
+	<li>2025, University of Bath (UK), Workshop ``Programs from Proofs'': <i>Dialectica and Hoare Logic</i> <a href="./seminars/DHL.pdf">(slides)</a></li><br>
 	<li>2024, Università Roma Tre (Italy), Workshop ``Trends in Proof-Theory of Linear Logic'': <i>An overview on Dialectica as Differentiation</i> <a href="./seminars/dialVSdiff.pdf">(slides)</a></li><br>
 	<li>2024, University of Sussex (UK), School of Informatics: <i>An overview on Dialectica and Differentiation</i></li><br>
 	<li>2024, Universit&eacute; Paris Est - Cr&eacute;teil (France), Laboratoire d'Algorithmique, Complexit&eacute; et Logique (LACL): <i>Lambda-Calculus, Taylor Expansion and (Tropical) Quantitative Semantics: an overview</i></li><br>
