--- a/research.html
+++ b/research.html
@@ -219,7 +219,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <p>
 <h3>Notes (no peer review)</h3>
 <ul>
-		<li>2025: <a href=./Enseignements/2024-25/ESSLLI.html>Lecture notes</a> on the <i>Scott topology over &#8472;(N)</i>, the <i>&#955;-calculus</i> and <i>Krivine's realisability</i> for a one week I gave at the ESSLLI25 summer school.<br><br>
+		<li>2025: <a href=./Enseignements/2024-25/ESSLLI.html>Lecture notes</a> on the <i>Scott topology over &#8472;(N)</i>, the <i>&#955;-calculus</i> and <i>Krivine's realisability</i> for a one week course I gave at the ESSLLI25 summer school.<br><br>
 		<li>2022: <i>&#955;-calculus is not an exotic mathematical subject</i> <a href="./papers/LamCalcNotExotic.pdf">(pdf)</a><br><br>
 </ul>
 </p>
