--- a/research.html
+++ b/research.html
@@ -71,14 +71,18 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 <ul>
 	<li><strong>Preprints (submitted or work in progress)</strong></p>
 		<ul>
-			<li>2025: <i>On the algorithmic structure of Dialectica programs</i> <a href="https://arxiv.org/abs/2501.16208">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
-			<li>2025: <i>Tropical Geometry of Probabilistic Programming Languages</i> <a href="https://arxiv.org/abs/2501.15637">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
 			<li>2025: <i>An excursion into Dialectica and Differentiation</i> <a href="https://arxiv.org/abs/2410.22494">(arxiv)</a> <!--<a href="bibtex.html#BarbarossaLDraft">(bib)</a>--><br><br>
 		</ul>
 	</li>
 	<li><strong>Published (with peer review)</strong></p>
 		<ul>
-        	<li><b><i>Tropical Mathematics and the Lambda-Calculus I: Metric and Differential Analysis of Effectful Programs</i></b> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a> (long version: <a href="https://arxiv.org/abs/2311.15704">arxiv</a>)<br>
+			<li><b><i>On the algorithmic structure of Dialectica programs</i></b> <!--<a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a>--> (long version: <a href="https://arxiv.org/abs/2501.16208">arxiv</a>)<br>
+					  	Davide Barbarossa and Thomas Powell<br>
+						Accepted to appear in CSL 2026<br><br>
+        	<li><b><i>Tropical Mathematics and the Lambda-Calculus II: Tropical Geometry of Probabilistic Programming Languages</i></b> <!--<a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a> (long version: <a href="https://arxiv.org/abs/2311.15704">arxiv</a>)--><br>
+					  	Davide Barbarossa and Paolo Pistone<br>
+						Accepted to appear in POPL 2026<br><br>
+			<li><b><i>Tropical Mathematics and the Lambda-Calculus I: Metric and Differential Analysis of Effectful Programs</i></b> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a> (long version: <a href="https://arxiv.org/abs/2311.15704">arxiv</a>)<br>
 					  	Davide Barbarossa and Paolo Pistone<br>
 						32nd EACSL Annual Conference on Computer Science Logic (CSL 2024)<br><br>
    			<li><b><i>Resource approximation for the &#955;&#956;-calculus</i></b> <a href="./seminars/LICS22.pdf">(slides)</a> <a href="./papers/LICS22.pdf">(PDF)</a> (long version: see my PhD thesis)<br>
