--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Marseille 2018, top of the Mont Puget-->
 
 <p><h3>Currently</h3>
 Since 01/2024, I am a post-doctoral <strong>Research Associate</strong> in the <a href="https://www.bath.ac.uk/teams/mathematical-foundations-of-computation-group-members/">Mathematical foundations of computation</a> group of the the <a href="https://www.bath.ac.uk/topics/department-of-computer-science-research/">Department of Computer Science</a> of the <a href="https://www.bath.ac.uk/">University of Bath</a>.
-<br>I work within <a href="https://t-powell.github.io/">Thomas Powell</a>'s  EPSRC project <a href="https://gow.epsrc.ukri.org/NGBOViewGrant.aspx?GrantRef=EP/W035847/1">Imperative Programs from Proofs</a>.
+<br>I work within <a href="https://t-powell.github.io/">Thomas Powell</a>'s  EPSRC project <a href="https://gtr.ukri.org/projects?ref=EP%2FW035847%2F1">Imperative Programs from Proofs</a>.
 </p>
 
 <p><h3><a href="cv.html">Previously</a></h3>
