--- a/research.html
+++ b/research.html
@@ -76,19 +76,19 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 	</li>
 	<li><strong>Published (with peer review)</strong></p>
 		<ul>
-			<li><b><i>On the algorithmic structure of Dialectica realisers</i></b> <!--<a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a>--> (long version: <a href="https://arxiv.org/abs/2501.16208">arxiv</a>)<br>
+			<li><b><i>On the algorithmic structure of Dialectica realisers</i></b> <!--<a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a>--> (extended version: <a href="https://arxiv.org/abs/2501.16208">arxiv</a>)<br>
 					  	Davide Barbarossa and Thomas Powell<br>
 						Accepted to appear in CSL 2026<br><br>
-        	<li><b><i>Tropical Mathematics and the Lambda-Calculus II: Tropical Geometry of Probabilistic Programming Languages</i></b> <!--<a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a> (long version: <a href="https://arxiv.org/abs/2311.15704">arxiv</a>)--><br>
+        	<li><b><i>Tropical Mathematics and the Lambda-Calculus II: Tropical Geometry of Probabilistic Programming Languages</i></b> <!--<a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a>--> (extended version: soon on arxiv<!--<a href="https://arxiv.org/abs/2311.15704">arxiv</a>-->)<br>
 					  	Davide Barbarossa and Paolo Pistone<br>
 						Accepted to appear in POPL 2026<br><br>
-			<li><b><i>Tropical Mathematics and the Lambda-Calculus I: Metric and Differential Analysis of Effectful Programs</i></b> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a> (long version: <a href="https://arxiv.org/abs/2311.15704">arxiv</a>)<br>
+			<li><b><i>Tropical Mathematics and the Lambda-Calculus I: Metric and Differential Analysis of Effectful Programs</i></b> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a> (extended version: <a href="https://arxiv.org/abs/2311.15704">arxiv</a>)<br>
 					  	Davide Barbarossa and Paolo Pistone<br>
 						32nd EACSL Annual Conference on Computer Science Logic (CSL 2024)<br><br>
-   			<li><b><i>Resource approximation for the &#955;&#956;-calculus</i></b> <a href="./seminars/LICS22.pdf">(slides)</a> <a href="./papers/LICS22.pdf">(PDF)</a> (long version: see my PhD thesis)<br>
+   			<li><b><i>Resource approximation for the &#955;&#956;-calculus</i></b> <a href="./seminars/LICS22.pdf">(slides)</a> <a href="./papers/LICS22.pdf">(PDF)</a> (extended version: see my PhD thesis)<br>
         				Davide Barbarossa<br>
         				36th Annual ACM/IEEE Symposium on Logic in Computer Science (LICS 2022)<br><br>
-   			<li><b><i>Taylor Subsumes Scott, Berry, Kahn and Plotkin</i></b> <a href="https://dl.acm.org/doi/10.1145/3371069">(PDF)</a> (long version: see my PhD thesis)<br>
+   			<li><b><i>Taylor Subsumes Scott, Berry, Kahn and Plotkin</i></b> <a href="https://dl.acm.org/doi/10.1145/3371069">(PDF)</a> (extended version: see my PhD thesis)<br>
 						Davide Barbarossa and Giulio Manzonetto<br>
 						Principles of Programming Languages (POPL) 2020, PACMPL Vol. 4, pp. 1:1-1:23<br>
  						<i>The paper received a Distinguished Paper Award from the POPL program committee!</i>
