--- a/research.html
+++ b/research.html
@@ -79,7 +79,7 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 			<li><b><i>On the algorithmic structure of Dialectica realisers</i></b> <!--<a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a>--> (extended version: <a href="https://arxiv.org/abs/2501.16208">arxiv</a>)<br>
 					  	Davide Barbarossa and Thomas Powell<br>
 						Accepted to appear in CSL 2026<br><br>
-        	<li><b><i>Tropical Mathematics and the Lambda-Calculus II: Tropical Geometry of Probabilistic Programming Languages</i></b> <!--<a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a>--> (extended version: <a href="https://arxiv.org/abs/2501.15637v2">arxiv</a>)<br>
+        	<li><b><i>Tropical Mathematics and the Lambda-Calculus II: Tropical Geometry of Probabilistic Programming Languages</i></b> <a href="./papers/POPL26.pdf">(PDF)</a> (extended version: <a href="https://arxiv.org/abs/2501.15637v2">arxiv</a>)<br>
 					  	Davide Barbarossa and Paolo Pistone<br>
 						Accepted to appear in POPL 2026<br><br>
 			<li><b><i>Tropical Mathematics and the Lambda-Calculus I: Metric and Differential Analysis of Effectful Programs</i></b> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a> (extended version: <a href="https://arxiv.org/abs/2311.15704">arxiv</a>)<br>
