--- a/research.html
+++ b/research.html
@@ -81,16 +81,16 @@ for which I would like to reconsider a transcendental approach (in a renewed sen
 						Accepted to appear in CSL 2026<br><br>
         	<li><b><i>Tropical Mathematics and the Lambda-Calculus II: Tropical Geometry of Probabilistic Programming Languages</i></b> <a href="./papers/POPL26.pdf">(PDF)</a> (extended version: <a href="https://arxiv.org/abs/2501.15637v2">arxiv</a>)<br>
 					  	Davide Barbarossa and Paolo Pistone<br>
-						Proceedings of the ACM on Programming Languages, Volume 10, Issue POPL 2026<br><br>
+						Proceedings of the ACM on Programming Languages, Volume 10 (POPL 2026)<br><br>
 			<li><b><i>Tropical Mathematics and the Lambda-Calculus I: Metric and Differential Analysis of Effectful Programs</i></b> <a href="https://drops.dagstuhl.de/entities/document/10.4230/LIPIcs.CSL.2024.14">(PDF)</a> (extended version: <a href="https://arxiv.org/abs/2311.15704">arxiv</a>)<br>
 					  	Davide Barbarossa and Paolo Pistone<br>
-						32nd EACSL Annual Conference on Computer Science Logic (CSL 2024)<br><br>
+						Proceedings of the 32nd EACSL Annual Conference on Computer Science Logic (CSL 2024)<br><br>
    			<li><b><i>Resource approximation for the &#955;&#956;-calculus</i></b> <a href="./seminars/LICS22.pdf">(slides)</a> <a href="./papers/LICS22.pdf">(PDF)</a> (extended version: see my PhD thesis)<br>
         				Davide Barbarossa<br>
-        				Proceedings of the 37th Annual ACM/IEEE Symposium on Logic in Computer Science, Issue LICS 2022<br><br>
+        				Proceedings of the 37th Annual ACM/IEEE Symposium on Logic in Computer Science (LICS 2022)<br><br>
    			<li><b><i>Taylor Subsumes Scott, Berry, Kahn and Plotkin</i></b> <a href="https://dl.acm.org/doi/10.1145/3371069">(PDF)</a> (extended version: see my PhD thesis)<br>
 						Davide Barbarossa and Giulio Manzonetto<br>
-						Proceedings of the ACM on Programming Languages, Volume 4, Issue POPL 2020<br>
+						Proceedings of the ACM on Programming Languages, Volume 4 (POPL 2020)<br>
  						<i>The paper received a Distinguished Paper Award from the POPL program committee!</i>
    			</li>
         </ul>
