--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@ Marseille 2018, top of the Mont Puget-->
 		</figure>
 		</td>
 		<td style="width:33%" align=left>
-      		Department of Computer Science
-     		<br>University of Bath
-      		<br>Bath, BA2 7AY
-      		<br>United Kingdom</br>
-		<br>Office: 1 West 4.51
-      		<br>Email = <a href="mailto:db2437(AT)bath.ac.uk">(&lambda;<i>x</i>. db2437<i>x</i>bath.ac.uk)@</a>
+      		Laboratoire d'Informatique du Parall&eacute;lisme
+     		<br>ENS-Lyon
+      		<br>Lyon
+      		<br>France</br>
+			<br>Office: M7.316
+      		<br>Email = <a href="mailto:davide.barbarossa(AT)ens-lyon.fr">(&lambda;<i>x</i>. davide.barbarossa<i>x</i>ens-lyon.fr)@</a>
+			<!--<br>Email = <a href="mailto:db2437(AT)bath.ac.uk">(&lambda;<i>x</i>. db2437<i>x</i>bath.ac.uk)@</a>-->
       		<!--<br>Email = <a href="mailto:davide.barbarossa(AT)unibo.it">(&lambda;<i>x</i>. davide.barbarossa<i>x</i>unibo.it)@</a>-->
       		<!--<br>Email = <a href="mailto:barbarossa(AT)lipn.univ-paris13.fr">(&lambda;<i>x</i>.barbarossa<i>x</i>lipn.univ-paris13.fr)@</a>-->
 		</td>
