--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Marseille 2018, top of the Mont Puget-->
       		<br>Lyon
       		<br>France</br>
 			<br>Office: M7.316
-      		<br>Email = <a href="mailto:davide.barbarossa(AT)ens-lyon.fr">(&lambda;<i>x</i>. davide.barbarossa<i>x</i>ens-lyon.fr)@</a>
+      		<br>Email = <a href="mailto:davide.barbarossa(AT)ens-lyon.fr">(&lambda;<i>x</i>.davide.barbarossa<i>x</i>ens-lyon.fr)@</a>
 			<!--<br>Email = <a href="mailto:db2437(AT)bath.ac.uk">(&lambda;<i>x</i>. db2437<i>x</i>bath.ac.uk)@</a>-->
       		<!--<br>Email = <a href="mailto:davide.barbarossa(AT)unibo.it">(&lambda;<i>x</i>. davide.barbarossa<i>x</i>unibo.it)@</a>-->
       		<!--<br>Email = <a href="mailto:barbarossa(AT)lipn.univ-paris13.fr">(&lambda;<i>x</i>.barbarossa<i>x</i>lipn.univ-paris13.fr)@</a>-->
@@ -59,8 +59,8 @@ Marseille 2018, top of the Mont Puget-->
 <hr size=3>
 
 <p><h3>Currently</h3>
-Since 01/2024, I am a post-doctoral <strong>Research Associate</strong> in the <a href="https://www.bath.ac.uk/teams/mathematical-foundations-of-computation-group-members/">Mathematical foundations of computation</a> group of the the <a href="https://www.bath.ac.uk/topics/department-of-computer-science-research/">Department of Computer Science</a> of the <a href="https://www.bath.ac.uk/">University of Bath</a>.
-<br>I work within <a href="https://t-powell.github.io/">Thomas Powell</a>'s  EPSRC project <a href="https://gtr.ukri.org/projects?ref=EP%2FW035847%2F1">Imperative Programs from Proofs</a>.
+Since 02/2026, I am a post-doctoral <strong>Researcher</strong> in the <a href="https://www.ens-lyon.fr/LIP/PLUME/">PLUME</a> team of the the <a href="https://www.ens-lyon.fr/LIP/index.php">Laboiratoire de l'Informatique du Parall&eacute;lisme</a> of the <a href="https://www.ens-lyon.fr/en/">&Eacute;cole Normale Sup&eacute;rierure de Lyon</a>.
+<!--<br>I work with <a href="https://perso.ens-lyon.fr/michele.pagani/">Michele Pagani</a> and <a href="https://perso.ens-lyon.fr/paolo.pistone/">Paolo Pistone</a>.-->
 </p>
 
 <p><h3><a href="cv.html">Previously</a></h3>
