--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Marseille 2018, top of the Mont Puget-->
 		</figure>
 		</td>
 		<td style="width:33%" align=left>
-      		Laboratoire d'Informatique du Parall&eacute;lisme
+      		Laboratoire de l'Informatique du Parall&eacute;lisme
      		<br>ENS-Lyon
       		<br>Lyon
       		<br>France</br>
