--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ Marseille 2018, top of the Mont Puget-->
 		</figure>
 		</td>
 		<td style="width:33%" align=left>
-      		Laboratoire de l'Informatique du Parall&eacute;lisme
-     		<br>ENS-Lyon
-      		<br>Lyon
-      		<br>France</br>
+      		Laboratoire LIP – ENS Lyon
+			<br>46 Allée d’Italie
+			<br>69364 LYON Cedex 07
+			<br>France</br>
 			<br>Office: M7.316
       		<br>Email = <a href="mailto:davide.barbarossa(AT)ens-lyon.fr">(&lambda;<i>x</i>.davide.barbarossa<i>x</i>ens-lyon.fr)@</a>
 			<!--<br>Email = <a href="mailto:db2437(AT)bath.ac.uk">(&lambda;<i>x</i>. db2437<i>x</i>bath.ac.uk)@</a>-->
