--- a/cv.html
+++ b/cv.html
@@ -17,14 +17,14 @@ Curriculum of Davide Barbarossa
 
 <hr size=3>
 
-<p><h3>Currently</h3>
+<p><h3><a href="index.html">Currently</a></h3>
 Since 02/2026, I am a post-doctoral <strong>Researcher</strong> in the <a href="https://www.ens-lyon.fr/LIP/PLUME/">PLUME</a> team of the the <a href="https://www.ens-lyon.fr/LIP/index.php">Laboiratoire de l'Informatique du Parall&eacute;lisme</a> of the <a href="https://www.ens-lyon.fr/en/">&Eacute;cole Normale Sup&eacute;rierure de Lyon</a>.
 
-<p><h3><a href="cv.html">Previously</a></h3>
+<p><h3>Previously</h3>
 <ul>
     <li>
         From 01/2024 to 01/2026, I was a post-doctoral <strong>Research Associate</strong> in the <a href="https://www.bath.ac.uk/teams/mathematical-foundations-of-computation-group-members/">Mathematical foundations of computation</a> group of the the <a href="https://www.bath.ac.uk/topics/department-of-computer-science-research/">Department of Computer Science</a> of the <a href="https://www.bath.ac.uk/topics/research/">University of Bath</a>.
-        <br>I worked within <a href="https://t-powell.github.io/">Thomas Powell</a>'s  EPSRC project <a href="https://gow.epsrc.ukri.org/NGBOViewGrant.aspx?GrantRef=EP/W035847/1">Imperative Programs from Proofs</a>.
+        <br>I worked within <a href="https://t-powell.github.io/">Thomas Powell</a>'s  EPSRC project <a href="https://gow.epsrc.ukri.org/NGBOViewGrant.aspx?GrantRef=EP/W035847/1">Imperative Programs from Proofs</a>.<br><br>
     <li>
         From 03/2022 to 01/2024, I was a <strong>post-Doc researcher</strong> at the <a href="https://disi.unibo.it">Dipartimento di Informatica</a> of Universit&agrave; di Bologna (the <a href="https://en.wikipedia.org/wiki/List_of_oldest_universities_in_continuous_operation#Founded_as_universities_before_1500">oldest</a> still active university in the western world!).
         <br>I worked within <a href="https://udallago.github.io/">Ugo Dal Lago</a>'s ERC CoG project <a href="https://site.unibo.it/diapason/en">Differential Program Semantics</a> (DIAPASoN).<br><br>
