--- a/cv.html
+++ b/cv.html
@@ -18,7 +18,7 @@ Curriculum of Davide Barbarossa
 <hr size=3>
 
 <p><h3><a href="index.html">Currently</a></h3>
-Since 02/2026, I am a post-doctoral <strong>Researcher</strong> in the <a href="https://www.ens-lyon.fr/LIP/PLUME/">PLUME</a> team of the the <a href="https://www.ens-lyon.fr/LIP/index.php">Laboiratoire de l'Informatique du Parall&eacute;lisme</a> of the <a href="https://www.ens-lyon.fr/en/">&Eacute;cole Normale Sup&eacute;rierure de Lyon</a>.
+Since 02/2026, I am a post-doctoral <strong>Researcher</strong> in the <a href="https://www.ens-lyon.fr/LIP/PLUME/">PLUME</a> team of the the <a href="https://www.ens-lyon.fr/LIP/index.php">Laboiratoire de l'Informatique du Parall&eacute;lisme</a> of the <a href="https://www.ens-lyon.fr/en/">&Eacute;cole Normale Sup&eacute;rieure de Lyon</a>.
 
 <p><h3>Previously</h3>
 <ul>
