--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Marseille 2018, top of the Mont Puget-->
 <hr size=3>
 
 <p><h3>Currently</h3>
-Since 02/2026, I am a post-doctoral <strong>Researcher</strong> in the <a href="https://www.ens-lyon.fr/LIP/PLUME/">PLUME</a> team of the the <a href="https://www.ens-lyon.fr/LIP/index.php">Laboiratoire de l'Informatique du Parall&eacute;lisme</a> of the <a href="https://www.ens-lyon.fr/en/">&Eacute;cole Normale Sup&eacute;rierure de Lyon</a>.
+Since 02/2026, I am a post-doctoral <strong>Researcher</strong> in the <a href="https://www.ens-lyon.fr/LIP/PLUME/">PLUME</a> team of the the <a href="https://www.ens-lyon.fr/LIP/index.php">Laboiratoire de l'Informatique du Parall&eacute;lisme</a> of the <a href="https://www.ens-lyon.fr/en/">&Eacute;cole Normale Sup&eacute;rieure de Lyon</a>.
 <!--<br>I work with <a href="https://perso.ens-lyon.fr/michele.pagani/">Michele Pagani</a> and <a href="https://perso.ens-lyon.fr/paolo.pistone/">Paolo Pistone</a>.-->
 </p>
 
