--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Marseille 2018, top of the Mont Puget-->
 		</td>
 		<td style="width:33%" align=left>
       		Laboratoire LIP – ENS Lyon
-			<br>46 Allée d’Italie
+			<br>46 All&eacute;e d'Italie
 			<br>69364 LYON Cedex 07
 			<br>France</br>
 			<br>Office: M7.316
